--- a/src/app/mapa/components/mapa-main/mapa-main.html
+++ b/src/app/mapa/components/mapa-main/mapa-main.html
@@ -1,2 +1,1 @@
-<!-- src/app/mapa/components/mapa-main/mapa-main.component.html -->
-<div id="mapContainer" class="map-container"></div>
+<div #mapContainerRef id="mapContainer" class="map-container"></div>
