Implementación de filtros flotantes en el visor: botón de configuración (tipos de captor) y lupa de búsqueda movible. Sincronización con mapa, cierre de paneles al hacer clic externo y mejoras visuales (UI/UX)

--- a/src/app/main/content-map/content-map.html
+++ b/src/app/main/content-map/content-map.html
@@ -1,9 +1,29 @@
 <section class="main-layout-maparea">
-  <app-mapa-main [observations]="observations" />
+  <!-- Botón fijo de configuración arriba derecha -->
+  <div class="top-right-settings">
+    <button (click)="togglePanel('filter')">
+      <mat-icon>settings</mat-icon>
+    </button>
+  </div>
 
-  <!-- Lupa flotante de búsqueda -->
-  <app-floating-search
+  <!-- Botón flotante de búsqueda parte inferior derecha -->
+
+  <!-- Panel de filtros -->
+  @if (showFilterPanel() && observations.length > 0) {
+  <app-point-filter
+    class="floating-panel top-right-panel"
     [observations]="observations"
+    [(selectedCaptorTypes)]="selectedCaptorTypes"
+    (selectedCaptorTypesChange)="onCaptorFilterChange($event)"
+  />
+  }
+
+  <!-- Panel de búsqueda -->
+  <app-floating-search
+    [observations]="filteredObservations"
     (selected)="onStationSelected($event)"
   />
+
+  <!-- Mapa -->
+  <app-mapa-main [observations]="filteredObservations"  />
 </section>
