--- a/src/app/mapa/components/floating-search/floating-search.html
+++ b/src/app/mapa/components/floating-search/floating-search.html
@@ -1,28 +1,29 @@
-<!-- Grupo completo: se puede mover -->
 <div class="floating-search" cdkDrag>
-  <!-- Solo este botón sirve como mango de arrastre -->
+  <!-- Botón de lupa (drag handle) -->
   <div class="drag-handle" cdkDragHandle>
-    <button class="search-button" (click)="toggleInput()">🔍</button>
+    <button class="search-button" (click)="toggleInput()">
+      <mat-icon>search</mat-icon>
+    </button>
   </div>
 
   <!-- Panel visible solo si showInput -->
   @if (showInput) {
-  <div class="search-panel">
-    <input
-      type="text"
-      placeholder="Buscar código INAMHI..."
-      [(ngModel)]="query"
-    />
+    <div class="search-panel">
+      <input
+        type="text"
+        placeholder="Buscar código INAMHI..."
+        [(ngModel)]="query"
+      />
 
-    @if (results.length > 0) {
-    <ul>
-      @for (obs of results; track obs.codigo_inamhi) {
-      <li class="result-item" (click)="select(obs)">
-        {{ obs.codigo_inamhi }} - {{ obs.name }}
-      </li>
+      @if (results.length > 0) {
+        <ul>
+          @for (obs of results; track obs.codigo_inamhi) {
+            <li class="result-item" (click)="select(obs)">
+              {{ obs.codigo_inamhi }} - {{ obs.name }}
+            </li>
+          }
+        </ul>
       }
-    </ul>
-    }
-  </div>
+    </div>
   }
 </div>
