Implementación del panel de datos de estación con pestañas para datos meteorológicos y pronóstico del tiempo. - Se corrigió el renderizado condicional del componente de datos al seleccionar una estación. - Se ajustaron estilos visuales (header INAMHI, botón cerrar, layout responsive). - Se integró el uso de <mat-tab-group> para alternar entre datos y forecast. - Se reorganizó el flujo: el componente station-data-panel ahora es controlado desde el contenedor padre (main-root). - Se agregó el componente forecast y su visualización dinámica vía @if.

--- a/src/app/main/main-root/main-root.html
+++ b/src/app/main/main-root/main-root.html
@@ -33,7 +33,16 @@
     </section>
 
     <section class="main-layout-maparea">
-      <app-content-map />
+      <app-content-map (showStationPanel)="onShowPanel($event)" />
+
+      @if(panelVisible){
+      <app-station-data-panel
+        class="floating-panel center-top-panel"
+        [stationInformation]="stationInfo"
+        [parametros]="parametrosEstacion"
+        (cerrarPanel)="panelVisible = false"
+      />
+      }
     </section>
   </main>
 </div>
