--- a/src/app/graph/station-chart/station-chart.html
+++ b/src/app/graph/station-chart/station-chart.html
@@ -14,26 +14,23 @@
     </button>
 
     <!-- Tipo de gráfica -->
-    <div
-      class="chart-type-group"
-      [class.collapsed]="tipoGraficaColapsado"
-    >
+    <div class="chart-type-group" [class.collapsed]="tipoGraficaColapsado">
       @if (!tipoGraficaColapsado) {
-      <div class="chart-type-field">
-        <span class="chart-field-title">Tipo de gráfica</span>
-        <mat-radio-group
-          [(ngModel)]="tipoGrafica"
-          (change)="onTipoGraficaChange($event)"
-          class="chart-type-options"
-        >
-          <mat-radio-button value="simple">Gráfica simple</mat-radio-button>
-          <mat-radio-button value="combinada">Gráfica combinada</mat-radio-button>
-        </mat-radio-group>
-      </div>
+        <div class="chart-type-field">
+          <span class="chart-field-title">Tipo de gráfica</span>
+          <mat-radio-group
+            [(ngModel)]="tipoGrafica"
+            (change)="onTipoGraficaChange($event)"
+            class="chart-type-options"
+          >
+            <mat-radio-button value="simple">Gráfica simple</mat-radio-button>
+            <mat-radio-button value="combinada">Gráfica combinada</mat-radio-button>
+          </mat-radio-group>
+        </div>
       } @else {
-      <div class="collapsed-label">
-        {{ tipoGrafica === 'simple' ? 'Gráfica simple' : 'Gráfica combinada' }}
-      </div>
+        <div class="collapsed-label">
+          {{ tipoGrafica === 'simple' ? 'Gráfica simple' : 'Gráfica combinada' }}
+        </div>
       }
     </div>
 
@@ -41,27 +38,42 @@
     <div class="param-selector-group">
       <span class="chart-field-title">Seleccionar parámetro</span>
       @if (tipoGrafica === 'simple') {
-      <mat-form-field appearance="outline" class="param-select-field">
-        <mat-label>Parámetro</mat-label>
-        <mat-select [(value)]="selectedParam" (selectionChange)="onParamChange()">
-          <mat-option [value]="null" disabled selected>Seleccione un parámetro</mat-option>
-          @for (p of parametros; track p) {
-          <mat-option [value]="p">{{ p.name_param }}</mat-option>
-          }
-        </mat-select>
-      </mat-form-field>
+        <mat-form-field appearance="outline" class="param-select-field">
+          <mat-label>Parámetro</mat-label>
+          <mat-select [(value)]="selectedParam" (selectionChange)="onParamChange()">
+            <mat-option [value]="null" disabled selected>Seleccione un parámetro</mat-option>
+            @for (p of parametros; track p) {
+              <mat-option [value]="p">{{ p.name_param }}</mat-option>
+            }
+          </mat-select>
+        </mat-form-field>
       } @else {
-      <mat-form-field appearance="outline" class="param-select-field">
-        <mat-label>Parámetros</mat-label>
-        <mat-select [(value)]="selectedParams" multiple (selectionChange)="onParamsChange()">
-          <mat-option disabled [value]="null">Seleccione uno o más parámetros</mat-option>
-          @for (p of parametros; track p) {
-          <mat-option [value]="p">{{ p.name_param }}</mat-option>
-          }
-        </mat-select>
-      </mat-form-field>
+        <mat-form-field appearance="outline" class="param-select-field">
+          <mat-label>Parámetros</mat-label>
+          <mat-select [(value)]="selectedParams" multiple (selectionChange)="onParamsChange()">
+            <mat-option disabled [value]="null">Seleccione uno o más parámetros</mat-option>
+            @for (p of parametros; track p) {
+              <mat-option [value]="p">{{ p.name_param }}</mat-option>
+            }
+          </mat-select>
+        </mat-form-field>
       }
     </div>
+
+    <!-- Selector de tipo de traza -->
+    @if (seriesLoaded) {
+    <div class="trace-type-group">
+      <span class="chart-field-title">Estilo de línea</span>
+      <mat-form-field appearance="outline" class="trace-select-field">
+        <mat-label>Tipo de traza</mat-label>
+        <mat-select [(value)]="selectedTraceType" (selectionChange)="onTraceTypeChange()">
+          <mat-option *ngFor="let tipo of traceTypes" [value]="tipo.value">
+            {{ tipo.label }}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+    </div>
+    }
   </div>
 
   <!-- Contenedor del gráfico Plotly -->
